[package]
name = "ddir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.12" }
# clap = { version = "^4.4", features = ["derive"] }
# once_cell = "^1.19"
# serde = { version = "^1.0", features = ["derive"] }
# serde_json = { version = "^1.0" }
